remove ctrlcv reference in tmux

--- a/runcoms/tmux.conf
+++ b/runcoms/tmux.conf
@@ -47,8 +47,8 @@ set -g status-utf8 on
 setw -g utf8 on
 
 # Copy / Paste
-bind C-c run "tmux show-buffer | ctrlcv c"
-bind C-v run "tmux set-buffer -- \"$(ctrlcv v)\"; tmux paste-buffer"
+bind C-c run "tmux show-buffer | pbcopy"
+bind C-v run "tmux set-buffer -- \"$(pbpaste)\"; tmux paste-buffer"
 
 # Set colors
 source-file ~/.tmux-solarized/tmuxcolors-256.conf
