--- a/runcoms/tmux.conf
+++ b/runcoms/tmux.conf
@@ -1,10 +1,8 @@
-# Screen last window
-bind C-b last-window
-
-# Allows for faster key repetition
-set -s escape-time 0
-set -sg repeat-time 600
-set -s quiet on
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 # Start numbering at 1
 set -g base-index 1
@@ -17,38 +15,9 @@ set -g renumber-windows on
 set -g monitor-activity on
 set -g visual-activity off
 
-# Use C-b a to send commands to nested TMUX
-bind b send-prefix
-
-# Rather than constraining window size to the maximum size of any client
-# connected to the *session*, constrain window size to the maximum size of any
-# client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
-
-# Use C-b r to refresh config
-bind r source-file ~/.tmux.conf
-
-# Be a 256 color terminal
-set -g default-terminal "screen-256color"
-
-# Set colors
-set -g status-left ""
-set -g status-right "#h %F %I:%M %p"
-
 # Allow renaming
 setw -g automatic-rename on
 set -g set-titles on
 
-# Bigger history
-set -g history-limit 10000
-
-# Allow UTF8
-set -g status-utf8 on
-setw -g utf8 on
-
-# Copy / Paste
-bind C-c run "tmux show-buffer | pbcopy"
-bind C-v run "tmux set-buffer -- \"$(pbpaste)\"; tmux paste-buffer"
-
-# Set colors
-source-file ~/.tmux-solarized/tmuxcolors-256.conf
+# boot tpm
+run ~/.tmux/plugins/tpm/tpm
