--- a/runcoms/tmux.conf
+++ b/runcoms/tmux.conf
@@ -3,6 +3,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'jimeh/tmux-themepack'
+
+# theme
+set -g @themepack 'block/cyan'
 
 # Start numbering at 1
 set -g base-index 1
