Better align tmux with dracula theme

--- a/runcoms/tmux.conf
+++ b/runcoms/tmux.conf
@@ -6,7 +6,7 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'jimeh/tmux-themepack'
 
 # theme
-set -g @themepack 'block/cyan'
+set -g @themepack 'powerline/block/magenta'
 
 # Start numbering at 1
 set -g base-index 1
