--- a/runcoms/tmux.conf
+++ b/runcoms/tmux.conf
@@ -3,16 +3,24 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'dracula/tmux'
 
-# theme
-set -g @themepack 'powerline/block/magenta'
+# dracula settings
+set -g @dracula-show-battery false
+set -g @dracula-show-network false
+set -g @dracula-show-weather false
+set -g @dracula-show-location false
+set -g @dracula-show-powerline true
+set -g @dracula-show-flags true
+set -g @dracula-military-time true
+set -g @dracula-show-left-icon session
+set -g @dracula-border-contrast true
 
 # Start numbering at 1
 set -g base-index 1
 setw -g pane-base-index 1
 
-# Remumber windows when I close one
+# Renumber windows when I close one
 set -g renumber-windows on
 
 # highlight active panes, but don't ping me about them
