--- a/runcoms/tmux.conf
+++ b/runcoms/tmux.conf
@@ -3,18 +3,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'dracula/tmux'
-
-# dracula settings
-set -g @dracula-show-battery false
-set -g @dracula-show-network false
-set -g @dracula-show-weather false
-set -g @dracula-show-location false
-set -g @dracula-show-powerline true
-set -g @dracula-show-flags true
-set -g @dracula-military-time true
-set -g @dracula-show-left-icon session
-set -g @dracula-border-contrast true
+set -g @plugin 'arcticicestudio/nord-tmux'
 
 # Start numbering at 1
 set -g base-index 1
